experimented wit box radius and opacity for visual effects

--- a/landing-page.html
+++ b/landing-page.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Family Recipes-Home</title>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
