added logo to page and coordinated colors to make theme on page. made logo into link to get back to landing page and updated the background photo to a mid centry kitchen

--- a/dinner-lighter.html
+++ b/dinner-lighter.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Dinner Lighter Options</title>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+<header>
+    <a href="landing-page.html"><img src="img/logo.png" alt="family-recipes-logo" height="75px" width="75px" id="logo"></a>    <h1 id="title">Dinner <br>Lighter Options</h1>
+</header>
 <body>
 
 </body>
