--- a/breakfast-comfort.html
+++ b/breakfast-comfort.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Breakfast Comfort Food</title>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+<header>
+    <a href="landing-page.html"><img src="img/logo.png" alt="family-recipes-logo" height="75px" width="75px" id="logo"></a>
+    <h1 id="title">Breakfast <br>Comfort Food</h1>
+</header>
 <body>
 
 </body>
