--- a/dessert-comfort.html
+++ b/dessert-comfort.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dinner Comfort Food</title>
+    <title>Dessert Comfort Food</title>
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <header>
-    <a href="landing-page.html"><img src="img/logo.png" alt="family-recipes-logo" height="75px" width="75px" id="logo"></a>    <h1 id="title">Dinner <br>Comfort Food</h1>
+    <a href="landing-page.html"><img src="img/logo.png" alt="family-recipes-logo" height="75px" width="75px" id="logo"></a>    <h1 id="title">Dessert <br>Comfort Food</h1>
 </header>
 <body>
 
