--- a/landing-page.html
+++ b/landing-page.html
@@ -6,10 +6,11 @@
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
 <header>
-    <h1 id="title">Family Recipes</h1>
+    <a href="landing-page.html"><img src="img/logo.png" alt="family-recipes-logo" height="150px" width="150px"></a>
 </header>
+<body>
+<br><br>
 <div id="categories">
     <h1>
         Categories
@@ -41,6 +42,16 @@
             <ul>
                 <li><a href="dinner-comfort.html">Comfort Food</a></li>
                 <li><a href="dinner-lighter.html">Lighter Options</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="dessert-menu">
+        <input type="checkbox" id="dessert">
+        <label for="dessert">Dessert</label>
+        <div class="menu-content">
+            <ul>
+                <li><a href="dessert-comfort.html">Comfort Food</a></li>
+                <li><a href="dessert-lighter.html">Lighter Options</a></li>
             </ul>
         </div>
     </div>
